# NebulaSEM

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  Make.inc  Makefile  README.md  Readme.md  TODO.md  run.sh  test.sh  todo.md
.github/workflows/: APIdoc.yml  NebulaSEM.yml  paper.yml
Projects/: Projects.sln
Projects/decompose/: Makefile  decompose.vcproj
Projects/mesh/: Makefile  mesh.vcproj
Projects/prepare/: Makefile  prepare.vcproj
Projects/prepare/Release/: BuildLog.htm  mt.dep  vc90.idb
Projects/solver/: Makefile  solver.vcproj
apps/: CMakeLists.txt  README.md  solversApp.cpp
apps/convection/: CMakeLists.txt  convection.cpp  convection.h
apps/diffusion/: CMakeLists.txt  diffusion.cpp  diffusion.h
apps/euler/: CMakeLists.txt  euler.cpp  euler.h
apps/hydro_balance/: CMakeLists.txt  hydro_balance.cpp  hydro_balance.h
apps/mesh/: CMakeLists.txt  meshApp.cpp
apps/piso/: CMakeLists.txt  piso.cpp  piso.h
apps/potential/: CMakeLists.txt  potential.cpp  potential.h
apps/prepare/: CMakeLists.txt  prepareApp.cpp
apps/properties/: CMakeLists.txt  properties.cpp
apps/transport/: CMakeLists.txt  transport.cpp  transport.h
apps/utils/: CMakeLists.txt  calc_walldist.cpp  calc_walldist.h  properties.cpp  properties.h  wrapper.cpp  wrapper.h
apps/walldist/: CMakeLists.txt  walldist.cpp  walldist.h
apps/wave/: CMakeLists.txt  wave.cpp  wave.h
cmake/: FindMETIS.cmake
decompose/: decompose.cpp  decompose.h  decomposeApp.cpp
doc/: Doxyfile
docs/: Doxyfile
examples/: README.md
examples/atmo/: T0  controls.txt  controls1.txt  p0
examples/atmo/acoustic-sphere/: T0.txt  controls  p0.txt  rho0.txt  sphere
examples/atmo/acoustic-sphere-amr/: controls  sphere
examples/atmo/acoustic-sphere-amr-dg/: controls  p0.txt  sphere
examples/atmo/advection-leveque/: T0.txt  bubble  controls
examples/atmo/advection-sphere/: T0.txt  U0.txt  controls  sphere
examples/atmo/advection-sphere-amr/: T0.txt  controls  sphere
examples/atmo/ctbs/: T0.txt  U0.txt  bubble  controls  p0.txt
examples/atmo/dc/: T0.txt  bubble  controls
examples/atmo/hydro-sphere/: U0.txt  controls  p0.txt  sphere
examples/atmo/lrtb/: T0  T0.txt  U0  U0.txt  bubble  bubble.txt  controls  p0.txt
examples/atmo/rtb/: T0  U0  controls.txt
examples/atmo/rtb2/: T0  bubble.txt  controls.txt  p0
examples/atmo/sphere/: controls  p0.txt  sphere
examples/atmo/srtb-3d/: T0.txt  bubble  controls
examples/atmo/srtb-amr/: T0.txt  bubble  controls
examples/atmo/srtb-amr-hill/: bubble  controls
examples/atmo/srtb-amr-zaxis/: controls
examples/atmo/srtb-curved/: T0.txt  bubble
examples/atmo/srtb-inclined/: T0.txt  bubble  controls  p0.txt
examples/backface/: U0  U0.txt  backface2.txt  backface4.txt  controls  controls.txt  e0  e0.txt  emu0  emu0.txt  k0  k0.txt  p0  p0.txt
examples/cavity/: T0  T0.txt  U0  U0.txt  cavity  cavityAss.txt  controls  controls.txt  controlsAss.txt  e0  e0.txt  emu0  emu0.txt  k0  k0.txt  p0  p0.txt
examples/cavity-amr/: cavity  controls
examples/cavity-amr-3d/: cavity  controls
examples/convec/: T0  T0.txt  U0  U0.txt  controls  controls.txt  convec.txt  p0  p0.txt
examples/harg/: U0  U0.txt  controls  controls.txt  e0  e0.txt  emu0  emu0.txt  k0  k0.txt  p0  p0.txt
examples/hills/: U0  U0.txt  controls  controls.txt  e0  e0.txt  emu0  emu0.txt  hill  k0  k0.txt  p0  p0.txt
examples/isentropic/: T0.txt  U0.txt  bubble  controls
examples/laplace/: T0  T0.txt  controls  controls.txt  laplace
examples/laplace-amr/: T0.txt  controls  laplace  laplace_curved
examples/mix/: U0  U0.txt  controls  controls.txt  e0  e0.txt  emu0  emu0.txt  k0  k0.txt  mix  p0  p0.txt
examples/potential/: U0  U0.txt  controls  controls.txt  cylinder  cylinder.txt  p0  p0.txt
examples/tet/: U0  U0.txt  controls  controls.txt  e0  e0.txt  emu0.txt  k0  k0.txt  p0.txt
field/: field.cpp  field.h
mesh/: mesh.cpp  mesh.h  meshApp.cpp  mshMesh.cpp  mshMesh.h
mp/: mp.cpp
paper/: paper.bib  paper.md
prepare/: prepare.cpp  prepare.h  prepareApp.cpp
projects/mesh/: Makefile
projects/prepare/: Makefile
projects/solver/: Makefile
scripts/: install_metis.sh
solvers/: solve.cpp  solve.h
solvers/solver/: solver.cpp
src/: CMakeLists.txt  all.txt
src/cuda/: solve.cu
src/field/: CMakeLists.txt  dg.cpp  dg.h  field.cpp  field.h  fvm.h
src/mesh/: CMakeLists.txt  hexMesh.cpp  hexMesh.h  mesh.cpp  mesh.h  meshApp.cpp  mshMesh.cpp
src/mp/: CMakeLists.txt  mp.cpp  mp.h  system.h
src/prepare/: CMakeLists.txt  prepare.cpp  prepare.h  prepareApp.cpp
src/solvers/: CMakeLists.txt  iteration.h  solve.cpp
src/solvers/cuda/: solve.cu
src/solvers/solver/: solver.cpp
src/tensor/: CMakeLists.txt  my_types.h  tensor.cpp  tensor.h  types.h
src/turbulence/: CMakeLists.txt  turbulence.cpp  turbulence.h
src/turbulence/ke/: CMakeLists.txt  ke.cpp  ke.h
src/turbulence/kw/: CMakeLists.txt  kw.cpp  kw.h
src/turbulence/les/: CMakeLists.txt  les.cpp  les.h
src/turbulence/mixing_length/: CMakeLists.txt  mixing_length.cpp  mixing_length.h
src/turbulence/realizableke/: CMakeLists.txt  realizableke.cpp  realizableke.h
src/turbulence/rngke/: CMakeLists.txt  rngke.cpp  rngke.h
src/util/: CMakeLists.txt  util.cpp  util.h
src/vtk/: CMakeLists.txt  vtk.cpp  vtk.h
tensor/: tensor.h
test_cases/atmo/: T0  bubble.txt  controls.txt  p0  rho0
test_cases/backface/: emu0
test_cases/cavity/: U0  controls.txt  e0
test_cases/convec/: T0  controls.txt
test_cases/harg/: U0  harg.txt  k0  p0
test_cases/hills/: U0  e0  hill.txt
test_cases/laplace/: T0
test_cases/mix/: emu0
test_cases/potential/: U0  potential.txt
test_cases/tet/: e0  emu0  tet.txt
test_cases/transport/: T0  U0  controls.txt  simple.txt
tests/: run_tests.sh
turbulence/: turbulence.h
turbulence/ke/: ke.cpp  ke.h
turbulence/kw/: kw.cpp  kw.h
turbulence/les/: les.cpp  les.h
turbulence/realizableke/: realizableke.cpp  realizableke.h
turbulence/rngke/: rngke.cpp  rngke.h
util/: util.cpp  util.h
vtk/: vtk.cpp  vtk.h  vtkApp.cpp
(+138 files in other folders)
