# mesh generation and manipulation
add_subdirectory(mesh)
# grid decomposition
add_subdirectory(prepare)
# solvers
add_subdirectory(utils)
add_subdirectory(walldist)
add_subdirectory(potential)
add_subdirectory(convection)
add_subdirectory(diffusion)
add_subdirectory(transport)
add_subdirectory(wave)
add_subdirectory(piso)
add_subdirectory(euler)
add_subdirectory(hydro_balance)

